tests/golden/type_errors/generic_enum_uninferable_constructor.cd
enum Box<T> { Value(T), Empty }
let value = Box.Empty();
