tests/golden/type_errors/generic_enum_uninferable_constructor.err
Type error at 2:23: cannot infer type parameter T for enum Box
  let value = Box.Empty();
                        ^
